--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "pg": "^7.11.0",
     "serve-static": "latest",
     "sha256": "^0.2.0",
-    "swagger-tools": "^0.10.4",
-    "oas3-tools": "^1.0.1"
+    "swagger-tools": "^0.10.4"
   }
 }
