--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^7.11.0",
     "serve-static": "latest",
     "sha256": "^0.2.0",
-    "swagger-tools": "^0.10.4"
+    "swagger-tools": "^0.10.4",
+    "swagger-ui-express": "4.0.6"
   }
 }
